# Electrux-Codes

./: .gitignore  README.md
AutomatedScheduler/include/: Data.hpp  Engine.hpp  ExecProcess.hpp  JobHandler.hpp  PollEvent.hpp  SlicedTime.hpp  TextHandler.hpp
AutomatedScheduler/src/: Main.cpp
BinarySearch/: Main.cpp
BinarySearch/src/: Main.c  by_interation.c
BinarySearchTree/: BST.hpp  Main.cpp
BinarySearchTree/include/: BST.hpp
Calendar/: calendar.c
ChatRoom/: README.md
Custom-Library/: README.md
Easier-Compiling/: Readme.md
Easier-Compiling/include/: funcs.h
Easier-Compiling/src/: genexec.cpp  main.c
ElectruxWorlds/: Assets.tar.bz2
ElectruxWorlds/include/: AssetManager.hpp  Data.hpp  Entity.hpp  EntityManager.hpp  GameEngine.hpp
ElectruxWorlds/src/: Main.cpp
ExtraLargeFactorials/src/: main.cpp
GraphImplementation/: README.md
GraphImplementation/include/: Graph.hpp  NodeList.hpp
GraphImplementation/src/: Graph.cpp  Main.cpp  Main2.cpp  NodeList.cpp
HammingCode/src/: Hamming.hpp  (+1 more)
HashTableImplementation/: CMakeLists.txt
INI_Client/: Readme.md
INI_Parser/: README.md  ini_parser.c  ini_parser.h
INI_Server/: README.md
Infix-To-Postfix/: Main.cpp
Infix-To-Prefix/: Main.cpp
Logger/: README.md
MultiThreading-C/: tot_words.c
ProjectCreator/: CMakeLists.txt  README.md
ProjectCreator/include/: CMakeGenerator.hpp  Data.hpp  DirFileFunctions.hpp  FindSFML.hpp  FlagFunctions.hpp  SDL2DefaultMain.hpp  SFMLDefaultMain.hpp
ProjectCreator/src/: main.cpp
TestWork/: Readme.md
XML_Parser/: Main.cpp
Xtreme-Integer/: README.md
(+46 files in other folders)
